...
                              hint: 'Email or Phone',
                              icon: Icons.person_outline,
                            ),
                            const SizedBox(height: 15),
                            _buildTextField(
                              controller: _passwordController,
                              hint: 'Password',
                              icon: Icons.lock_outline,
                              isPassword: true,
                            ),
                          ],
                        ),
                      ),
...
                        ),
                      ),
                      const SizedBox(height: 10),

                      InnButton(
                        onPressed: _onLoginPressed,
                        buttonText: 'Login',
                        cs: cs,
                        isLoading: isLoading,
                      ),

                      const SizedBox(height: 5),
                      Text('or', style: TextStyle(color: cs.onSurfaceVariant)),
...
                          key: _formKey,
                          child: Column(
                            mainAxisSize: MainAxisSize.min,
                            children: [
                              _buildTextField(
                                controller: _emailController,
                                hint: 'Email',
                                icon: Icons.person_outline,
                              ),
                              const SizedBox(height: 20),
                              _buildTextField(
                                controller: _passwordController,
                                hint: 'Password',
...
