...

                Padding(
                  padding: const EdgeInsets.fromLTRB(20, 15, 20, 10),
                  child: Column(
                    children: [
                      // Recently Viewed
                      _sectionHeader('Recently Viewed', () {
                        context.pushNamed('app_colors');
                      }),
                      const SizedBox(height: 16),
                      _recentlyViewedList(),

                      const SizedBox(height: 32),
...
